feature tests finished

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/benclayton98/rock-papers-scissors-challenge#readme",
   "devDependencies": {
+    "eslint": "^7.31.0",
     "express": "^4.17.1",
     "jasmine": "^3.8.0",
     "nodemon": "^2.0.12"
