--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/benclayton98/rock-papers-scissors-challenge#readme",
   "devDependencies": {
     "eslint": "^7.31.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "express": "^4.17.1",
     "jasmine": "^3.8.0",
     "nodemon": "^2.0.12"
