--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "express": "^4.17.1",
+    "heroku": "^7.56.1",
     "jasmine": "^3.8.0",
     "nodemon": "^2.0.12"
   },
